# ChangeLog for x11-drivers/xf86-input-tslib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-tslib/ChangeLog,v 1.19 2010/02/24 16:58:23 scarabeus Exp $

  24 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xf86-input-tslib-0.0.6.ebuild:
  Drop old.

*xf86-input-tslib-0.0.6-r1 (19 Feb 2010)

  19 Feb 2010; Peter Volkov <pva@gentoo.org>
  +xf86-input-tslib-0.0.6-r1.ebuild:
  Bump to most recent debian tarball. Should fix some crashes.

*xf86-input-tslib-0.0.6 (07 Jan 2010)

  07 Jan 2010; <solar@gentoo.org> +xf86-input-tslib-0.0.6.ebuild:
  - version bump. Pull updated debian patchset.
  http://packages.qa.debian.org/x/xf86-input-tslib.html

  22 Sep 2009; Rémi Cardona <remi@gentoo.org>
  -xf86-input-tslib-0.0.5.ebuild:
  drop old ebuilds

  28 Jul 2009; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  x11-drivers -> x11.

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  21 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  arm stable

  16 Apr 2009; <solar@gentoo.org> xf86-input-tslib-0.0.5-r1.ebuild:
  Remove stupid evdev checks. Never die cuz a kernel.src does not exist.
  linux-info.eclass must die

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org>
  xf86-input-tslib-0.0.5-r1.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog: