@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST xf86-input-tslib-0.0.5.tar.bz2 226648 RMD160 a7a2d64afbbd816c0107ca285bed148f84c5be10 SHA1 fa87a543e2a3d7a4aec56d1f85d731e0fcf8daab SHA256 d70c64f3f4fe931e12d5af7f91ff04cd0d16dd7459061c50b3149f9e35de8091
 DIST xf86-input-tslib_0.0.5-6.diff.gz 19656 RMD160 23afb83800960e05ec94e8f3917e0fe6a3ec5cef SHA1 77a6a9566f33248e515373cf67f3bb7e6087a4a1 SHA256 c0f2f6cebb78c3b69d75c12051e0bb03ffc1c41aaca7aef02562211441eb658b
 DIST xf86-input-tslib_0.0.6-3.tar.gz 307751 RMD160 dbd81e0d6168ea6694756bebf6dbe5d972d71a0c SHA1 708c91cfc16f7f04d2d639addb424aae686037cd SHA256 546083a3d70b0da4403fb2add28036ed48f6a91adb802044ac0e4f3bcbc429f5
-EBUILD xf86-input-tslib-0.0.5-r1.ebuild 1286 RMD160 2f7a65b9754aeb85d0eda18c9ffab7511204abd5 SHA1 8ba67baee4ae837dc55d450cc7486ac963d41db3 SHA256 a9352332345d6d524e5a32e00eddafd31e116d4cf32055c309e98f73255502d4
-EBUILD xf86-input-tslib-0.0.6-r1.ebuild 1070 RMD160 5e79d44bbe349f00e67acfd0c5a5f8f718262e90 SHA1 eaf329490612c91efd23e9814ddc24673d22d288 SHA256 5ea544b8250f696727ab3e766ee8d365e410a030ec6df3180ef310448c37e440
-MISC ChangeLog 2868 RMD160 bbabc2976bea58fc52f79715f4f4032e5805bbee SHA1 402094855fbb671929becb274686f03e72839fb9 SHA256 3ba5dc33914c091f84b281321ebf4427b469d6914d401282236e65982af194bf
+EBUILD xf86-input-tslib-0.0.5-r1.ebuild 1298 RMD160 b2baf02e3025b6827b1f5c6a783a53dfe448bd0d SHA1 2376cb4aa14a518a1c7c180e310e6744f80cc0b0 SHA256 3797a63998a10f74b787a9761a8c36c8c788d72c96fdc96ba8d27ad90eb1135f
+EBUILD xf86-input-tslib-0.0.6-r1.ebuild 1086 RMD160 dd42ae69e12be5ca7573380b3172fbcb38c90d18 SHA1 37a52d48ced4b50240c34544f8eb7d5f61afa9ec SHA256 b45b375d9d1a650b7c80c7e4fdc04ad68a75ad6fd83cfef658041dda3ce3f8a9
+MISC ChangeLog 3052 RMD160 5e3444879e75746b2898f873131b400763f92e76 SHA1 42864a1501ded7f8edae6cf546493fa2c1d720a9 SHA256 b95d244d1a4985447dace5f14b0ece02f51af62868605bd63684e789a08de661
 MISC metadata.xml 363 RMD160 9829563a3262c5153fd253a69e44707b05b65ee0 SHA1 1f96a02d0999443354264764e483f696a04f56f8 SHA256 bd50ec4a36c95aed7657ad9e58447e64a9548261c6f2bf3888dd1d2689a4694c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuFWoMACgkQHB6c3gNBRYeAKACgrGmmuGa2Sw5qmsgWtLn2mF+D
-J3gAoITiQzh3kw/CtmHfkBgo8aVhc/aI
-=Jqg7
+iF4EAREIAAYFAkueZIAACgkQTwhj9JtAlp7g1wD/frpy+AsCzugsQQYlUNOavFb3
+nL/1PPqMshfzQiwfxEIA+QFtdtOwq0Ce015QOL9sXmnpUxmo27d9Auapp3gToHRG
+=QL0s
 -----END PGP SIGNATURE-----
