@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/xf86-input-tslib
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-tslib/ChangeLog,v 1.19 2010/02/24 16:58:23 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-input-tslib/ChangeLog,v 1.20 2010/03/15 16:46:50 vapier Exp $
+
+  15 Mar 2010; Mike Frysinger <vapier@gentoo.org>
+  xf86-input-tslib-0.0.5-r1.ebuild, xf86-input-tslib-0.0.6-r1.ebuild:
+  Fix DEPEND settings #309595 by Chí-Thanh Christopher Nguyễn.
 
   24 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
   -xf86-input-tslib-0.0.6.ebuild:
